--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,7 @@ main {
     position: relative;
 }
 
+
 #cover-text {
     /* Final rgba value sets the opacity so it is semi-transparent*/
     background-color: rgba(241, 109, 107, .7);
@@ -111,6 +112,50 @@ main {
 
 #cover-text > h2, #cover-text > h3 {
     color:#ffffff;
+}
+
+/* Reasons */
+#reasons {
+    width: 90%;
+    margin: 20px auto;
+}
+
+#reasons h2 {
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 280%;
+}
+
+#benefits-physical > div 
+#benefits-mental > div {
+    line-height: 20px;
+    margin-bottom: 20px;
+}
+
+#benefits p {
+    padding: 0 20px; 
+}
+
+#benefits hr {
+    border-top: 1px solid #3a3a3a;
+    margin: 5px 0; 
+}
+
+#circle-cover-bg {
+    background: url("../images/reasons-image.webp") no-repeat top center / cover; 
+    height: 90vw;
+    width: 90vw;
+    margin-bottom: 20px;
+    /* Makes the sqaure image into a circle */
+    border-radius: 50%;
+    max-width: 300px;
+    max-height: 300px;
+}
+
+#benefits-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /* Footer */
@@ -153,6 +198,7 @@ main {
         line-height: 75px;
         margin: 0 0.5rem;
     }
+
 
     /* Main Content */
     main {
