--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,6 +199,24 @@ main {
         margin: 0 0.5rem;
     }
 
+    /* Reasons section */
+    #benefits-physical,
+    #benefits-mental {
+        display: flex;
+        flex-direction: column;
+        width: 100% ;
+    }
+
+    #benefits-physical > div,
+    #benefits-mental > div {
+        width: 75%;
+    }
+
+    #benefits-mental > div {
+        text-align: end;
+        align-self: flex-end;
+    }
+
 
     /* Main Content */
     main {
@@ -244,4 +262,30 @@ hr {
     #menu a:hover{
         border-bottom: 1px solid #3a3a3a;
     }
+}
+
+/* Reasons section */
+#benefits {
+    display: flex;
+    flex-direction: row;
+}
+
+#benefits > div {
+    flex: 1; 
+}
+
+#benefits-image {
+    order: 0; 
+}
+
+#benefits-mental {
+    order: 1; 
+}
+
+#benefits-mental > div {
+    align-self: flex-start;
+}
+
+#benefits-physical > div {
+    align-self: flex-end; 
 }
