--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,37 +1,40 @@
 /* Google Fonts Import */
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap');
 
-/* Asterisk wildcard selector to override default styles added by the browser */ 
-*{
+/* Asterisk wildcard selector to override default styles added by the browser */
+* {
     padding: 0;
-    margin: 0; 
+    margin: 0;
     box-sizing: border-box;
 }
 
 /* General Styles */
 body {
     min-height: 100vh;
-    display: flex; 
-    flex-direction: column; 
-    /* Generic project styles */ 
-    color: #3a3a3a; 
+    display: flex;
+    flex-direction: column;
+    /* Generic project styles */
+    color: #3a3a3a;
     font-family: 'Lato', sans-serif;
 }
 
-h1, h2, h3 { font-family: 'Oswald', sans-serif;
+h1,
+h2,
+h3 {
+    font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
-    color:#252525;
+    color: #252525;
 }
 
 /* Header */
 header {
     background-color: #ffffff;
-    padding: 0 1 rem; 
+    padding: 0 1 rem;
     position: fixed;
-    z-index: 99 ;
+    z-index: 99;
     width: 100%;
-    box-shadow: 0 2px 2px #3a3a3a ;
+    box-shadow: 0 2px 2px #3a3a3a;
     display: flex;
     justify-content: space-between;
     align-items: baseline;
@@ -42,13 +45,13 @@ header a {
     color: inherit;
 }
 
-#menu { 
-    font-size:110%; 
+#menu {
+    font-size: 110%;
     letter-spacing: 4px;
     list-style-type: none;
 }
 
-#menu > li {
+#menu>li {
     margin-bottom: 1em;
 }
 
@@ -58,13 +61,13 @@ header a {
 
 /* Navbar styles with dropdown toggle */
 nav {
-    position:absolute; 
+    position: absolute;
     background-color: #ffffff;
-    width: 100%; 
-    left: 0; 
+    width: 100%;
+    left: 0;
     padding: 0 1rem;
-    box-shadow: 0 2px 2px #3a3a3a ;
-    display:none;
+    box-shadow: 0 2px 2px #3a3a3a;
+    display: none;
     top: 100%;
 }
 
@@ -74,7 +77,7 @@ nav {
 }
 
 #nav-toggle {
-    display:none; 
+    display: none;
 }
 
 .nav-toggle-label {
@@ -82,18 +85,18 @@ nav {
 }
 
 /* Main Content */
-main { 
-   
-    /* Make main element take up any surplus space to push footer down */ 
-    flex: 1 0 auto; 
+main {
+
+    /* Make main element take up any surplus space to push footer down */
+    flex: 1 0 auto;
     margin-top: 47px;
 }
 
 /* Hero section */
 #hero {
-    height:600px;
-    width: 100%; 
-    background: url("../images/hero-image.webp") no-repeat center center/cover; 
+    height: 600px;
+    width: 100%;
+    background: url("../images/hero-image.webp") no-repeat center center/cover;
     position: relative;
 }
 
@@ -101,8 +104,8 @@ main {
 #cover-text {
     /* Final rgba value sets the opacity so it is semi-transparent*/
     background-color: rgba(241, 109, 107, .7);
-    font-size: 130%; 
-    position:absolute; 
+    font-size: 130%;
+    position: absolute;
     bottom: 30px;
     width: 80%;
     min-height: 200px;
@@ -110,8 +113,9 @@ main {
     padding-left: 10px;
 }
 
-#cover-text > h2, #cover-text > h3 {
-    color:#ffffff;
+#cover-text>h2,
+#cover-text>h3 {
+    color: #ffffff;
 }
 
 /* Reasons */
@@ -126,23 +130,22 @@ main {
     font-size: 280%;
 }
 
-#benefits-physical > div 
-#benefits-mental > div {
+#benefits-physical>div #benefits-mental>div {
     line-height: 20px;
     margin-bottom: 20px;
 }
 
 #benefits p {
-    padding: 0 20px; 
+    padding: 0 20px;
 }
 
 #benefits hr {
     border-top: 1px solid #3a3a3a;
-    margin: 5px 0; 
+    margin: 5px 0;
 }
 
 #circle-cover-bg {
-    background: url("../images/reasons-image.webp") no-repeat top center / cover; 
+    background: url("../images/reasons-image.webp") no-repeat top center / cover;
     height: 90vw;
     width: 90vw;
     margin-bottom: 20px;
@@ -158,39 +161,66 @@ main {
     justify-content: center;
 }
 
+#times {
+    background: url("../images/dublin-city.webp") no-repeat center/cover;
+    /* Handles responsitivity without the need for a media query */
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#times div {
+    color: #fafafa;
+    background-color: rgb(0, 0, 0, .6);
+    padding: 15px;
+    /* This will not wrap on screens of less than 400px wide. Each div will expand to fill the available space on its row */
+    flex-basis: 200px;
+    flex-grow: 1;
+    /* creates a grid of meetup time divs over the background image */
+    border: 2px solid white;
+}
+
+#times h3 {
+    /* Override the heading color set in general styles */
+    color: #fafafa;
+}
+
 /* Footer */
 #social-networks {
     text-align: center;
-    padding:20px 0;
-    display: flex; 
-    justify-content: space-evenly; 
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-evenly;
     list-style-type: none;
 }
 
 #social-networks i {
-    font-size:160%;
+    font-size: 160%;
     padding: 5%;
-    color:#3a3a3a
+    color: #3a3a3a
 }
 
 /* Media query: For tablets and larger (768px and up) */
 @media screen and (min-width:768px) {
+
     /* Header */
     nav {
-        display:block;
-        position:relative; 
-        box-shadow:none; 
+        display: block;
+        position: relative;
+        box-shadow: none;
         width: fit-content;
-        padding-right: 1rem; 
+        padding-right: 1rem;
     }
 
-    #menu {display:flex;}
-    #menu > li { 
-        padding-left:1rem;
+    #menu {
+        display: flex;
+    }
+
+    #menu>li {
+        padding-left: 1rem;
     }
 
     .nav-toggle-label {
-        display:none;
+        display: none;
     }
 
     #logo {
@@ -204,15 +234,15 @@ main {
     #benefits-mental {
         display: flex;
         flex-direction: column;
-        width: 100% ;
+        width: 100%;
     }
 
-    #benefits-physical > div,
-    #benefits-mental > div {
+    #benefits-physical>div,
+    #benefits-mental>div {
         width: 75%;
     }
 
-    #benefits-mental > div {
+    #benefits-mental>div {
         text-align: end;
         align-self: flex-end;
     }
@@ -221,19 +251,19 @@ main {
     /* Main Content */
     main {
         /* Push main content down to accomodate large header */
-        margin-top:79px;
+        margin-top: 79px;
     }
 }
 
 /* Hero */
 #cover-text {
-    width: 300px; 
-    right: 50px; 
+    width: 300px;
+    right: 50px;
 }
 
 #reasons {
-    width:90%;
-    margin: 20px auto; 
+    width: 90%;
+    margin: 20px auto;
 }
 
 #reasons h2 {
@@ -259,7 +289,7 @@ hr {
 
 /* Media query: For laptops and larger (992px and up) */
 @media screen and (min-width:992px) {
-    #menu a:hover{
+    #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
     }
 }
@@ -270,22 +300,22 @@ hr {
     flex-direction: row;
 }
 
-#benefits > div {
-    flex: 1; 
+#benefits>div {
+    flex: 1;
 }
 
 #benefits-image {
-    order: 0; 
+    order: 0;
 }
 
 #benefits-mental {
-    order: 1; 
+    order: 1;
 }
 
-#benefits-mental > div {
+#benefits-mental>div {
     align-self: flex-start;
 }
 
-#benefits-physical > div {
-    align-self: flex-end; 
+#benefits-physical>div {
+    align-self: flex-end;
 }
